--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
 	</head>
 
 	<body>
-		<div id="score">
-			<label for="lblScore">SCORE:</label>
-			<input id="lblScore" type="text" />
-		</div>
-		<div id="time">
-			<label for="lblTime">TIME:</label>
-			<input id="lblTime" type="text" />
-		</div>
-		<div id="game">
-			<canvas id="canvas" height="600" width="600"></canvas>
-		</div>
+        <div id="gameScreen">
+            <div id="score">
+                <label for="lblScore">SCORE:</label>
+                <input id="lblScore" type="text" />
+            </div>
+            <div id="time">
+                <label for="lblTime">TIME:</label>
+                <input id="lblTime" type="text" />
+            </div>
+            <div id="game">
+                <canvas id="canvas" height="600" width="600"></canvas>
+            </div>
+        </div>
+        <div id="registrationScreen">
+            <form>
+
+            </form>
+        </div>
 	</body>
 </html>
