--- a/index.html
+++ b/index.html
@@ -6,23 +6,37 @@
 	</head>
 
 	<body>
-        <div id="gameScreen">
-            <div id="score">
-                <label for="lblScore">SCORE:</label>
-                <input id="lblScore" type="text" />
-            </div>
-            <div id="time">
-                <label for="lblTime">TIME:</label>
-                <input id="lblTime" type="text" />
-            </div>
-            <div id="game">
-                <canvas id="canvas" height="600" width="600"></canvas>
-            </div>
-        </div>
-        <div id="registrationScreen">
+		<div id="welcome">
+			<button onclick="goToSignInScreen()">Log-in</button>
+			<button onclick="goToRegistrationScreen()">Sign-up</button>
+		</div>
+
+		<div id="loginPage">
+			<label for="userName">Please Enter User Name:</label>
+			<br>
+			<input name="userName" id="userName" cols="30" rows="10"></input>
+			<br>
+			<label for="password">Please Enter Password:</label>
+			<br>
+			<input type="password" name="password" id="password" cols="30" rows="10"></input>
+		</div>
+		<div id="gameScreen">
+			<div id="score">
+				<label for="lblScore">SCORE:</label>
+				<input id="lblScore" type="text" />
+			</div>
+			<div id="time">
+				<label for="lblTime">TIME:</label>
+				<input id="lblTime" type="text" />
+			</div>
+			<div id="game">
+				<canvas id="canvas" height="600" width="600"></canvas>
+			</div>
+		</div>
+		<div id="registrationScreen">
             <form>
 
             </form>
         </div>
-	</body>
+		</body>
 </html>
