need to play audio and fix monsters bug

--- a/index.html
+++ b/index.html
@@ -15,24 +15,19 @@
          
 	</head>
 	<body>
-<<<<<<< HEAD
-        <div id="menu">
-        	<li><a onclick="showOneScreen('welcome')" class="navBar">Welcome</a></li>
-           <li><a onclick="showOneScreen('registrationScreen')" class="navBar">Register</a></li>
-           <li><a onclick="showOneScreen('loginPage')" class="navBar">Login</a></li>
-           <li><a onclick="showOneScreen('play')" class="navBar">About</a></li>
-           <li><a onclick="showOneScreen('settingsPage')" class="navBar">Play</a></li>
-           
-         </div>
-         <br><br><br>
-=======
         <div id="aboutModal" class="modal">
-            <p>Thanks for clicking. That felt good.</p>
+			<u>About</u>
+            <p>We used jquery for validation and to acces variables</p>
+            <p>and we didn't use templates</p>
+            <p>One of the hardest things in the assignment was to design</p>
+            <p>the website, and We  also had a hard time getting the</p>
+            <p>monsters to follow the Pacman optimally.</p>
         </div>      
         <header>
             <div id="header">
-                <img src="photos/logoPicture.png" height="50">
+                <img src="photos/logoPicture2.png" height="50">
                 <img src="photos/logo.png" height="50">
+				<label id="topLable" for="">Eitan Chertok , Ehud Malul</label>
             </div>
             <div id="menu">
                 <li><a onclick="showOneScreen('welcome')" class="navBar">Welcome</a></li>
@@ -43,7 +38,6 @@
              </div>
         </header>
          <br><br><br><br><br><br>
->>>>>>> dcfcc66db46b640d72be624b49339e5ebd880590
 		<div id="welcome">
 			<button onclick="showOneScreen('loginPage')" class="welcomeButton">Log-in</button>
 			<button onclick="showOneScreen('registrationScreen')" class="welcomeButton">Sign-up</button>
@@ -178,6 +172,7 @@
         </div>
         <footer>
             <img src="photos/logo.png" height="40">
+			<a id="wirteNice" href="mailto:Eitanche@post.bgu.ac.il, Ehudmal@post.bgu.ac.il">Contact Us</a>
         </footer>
 		</body>
 </html>
