--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <script type="text/javascript" src="registrationValidate.js"></script>
         <script type="text/javascript" src="loginValidate.js"></script>
         <script type="text/javascript" src="settingsBackend.js"></script>
+        <script type="text/javascript" src="monstersMovement.js"></script>
+        <script type="text/javascript" src="draw.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
@@ -99,8 +101,11 @@
 			</form>
 		</div>
 		<div id="gameScreen" class="parent">
+            <audio id = "audio">
+                <source src = "pacmanMusic.mp3" type = "audio/mpeg">
+            </audio>
 			<div class="child">
-
+                User: <label id="gameUserName" type = "text"></label>
 				<div id="score">
 					<label for="lblScore">SCORE:</label>
 					<input id="lblScore" type="text" />
